# android-avf-stubs

./: .gitignore  README.md  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yaml
avf-stubs/: build.gradle.kts
avf-stubs/src/main/: AndroidManifest.xml
avf-stubs/src/main/cpp/: CMakeLists.txt  stub.c
avf-stubs/src/main/cpp/include/: vm_main.h
avf-stubs/src/main/java/android/system/virtualmachine/: BuildFlags.java  StubUtils.java  VirtualMachine.java  VirtualMachineCallback.java  VirtualMachineConfig.java  VirtualMachineCustomImageConfig.java  VirtualMachineDescriptor.java  VirtualMachineException.java  VirtualMachineManager.java  VirtualizationFrameworkInitializer.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
